[tool.poetry]
name = "hash_table"
version = "1.0.0"
description = "Basic Hash Table in Python"
authors = ["Ryan Butler <ryanleonbutler@gmail.com>"]
readme = "README.md"
license = "MIT license"
homepage = "https://github.com/ryanleonbutler/hash_table"
repository = "https://github.com/ryanleonbutler/hash_table"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
coverage = "^6.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
pre-commit = "^2.17.0"
ipython = "^8.2.0"

[tool.tox]
legacy_tox_ini = """
[flake8]
max-line-length = 119

[Tox]
isolated_build = true
skipsdist = true
envlist =
    py{310,39,38},
    flake8,
    tests

[testenv]
deps =
    poetry>=1.1.0
whitelist_external = poetry
skip_install = true
commands_pre = poetry install -vvv

[testenv:flake8]
commands =
    poetry run flake8 src/hash_table tests/

[testenv:tests]
commands =
    poetry run pytest -ra -v --cov=src/black_star --cov-report xml .
"""

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
